[package]
name = "rustdown"
version = "1.0.0"
authors = ["kit <kit@hastur.io>"]
edition = "2021"
description = "A tool for downloading Rust toolchains"
readme = "README.md"
repository = "https://github.com/kit-981/rustdown"
license = "GPL-3.0-or-later"
keywords = ["async", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ahash = { version = "0.7.6", features = ["serde"] }
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.0", features = ["derive"] }
eyre = "0.6.6"
futures = "0.3.21"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = "0.11.9"
serde = { version = "1.0.131", features = ["derive"] }
sha2 = "0.10.1"
tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.5.8"
tracing = { version = "0.1.29", features = ["max_level_trace", "release_max_level_trace"] }
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.8"
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = true